--- a/helm-hooks/manifests.yaml
+++ b/helm-hooks/manifests.yaml
@@ -11,7 +11,7 @@ spec:
       containers:
         - name: upgrade-sql-schema
           image: alpine:latest
-          command: ["echo", "Done✔️"]
+          command: ["echo", "New change"]
       restartPolicy: Never
 ---
 apiVersion: v1
