--- a/helm-hooks/manifests.yaml
+++ b/helm-hooks/manifests.yaml
@@ -3,6 +3,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: migration-job
+  annotations:
+    argocd.argoproj.io/sync-options: Force=true,Replace=true
 spec:
   template:
     spec:
@@ -26,6 +28,6 @@ spec:
       containers:
         - name: page-up
           image: alpine:latest
-          command: ["sleep", "2"]
+          command: ["sleep", "10"]
       restartPolicy: Never
   backoffLimit: 0
