--- a/helm-hooks/manifests.yaml
+++ b/helm-hooks/manifests.yaml
@@ -17,7 +17,9 @@ spec:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: maint-page-up
+  name: another-1
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
 spec:
   template:
     spec:
