--- a/helm-hooks/manifests.yaml
+++ b/helm-hooks/manifests.yaml
@@ -3,6 +3,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   generateName: migration-job
+  annotations:
+    helm.sh/hook: pre-install
 spec:
   template:
     spec:
