--- a/helm-hooks/manifests.yaml
+++ b/helm-hooks/manifests.yaml
@@ -4,9 +4,10 @@ kind: Job
 metadata:
   generateName: migration-job
   annotations:
-    helm.sh/hook: pre-install
+    argocd.argoproj.io/hook: Sync
     argocd.argoproj.io/sync-options: Force=true,Replace=true
-    helm.sh/hook-delete-policy: before-hook-creation
+    argocd.argoproj.io/sync-wave: "-10"
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
 spec:
   template:
     spec:
