--- a/helm-hooks/manifests.yaml
+++ b/helm-hooks/manifests.yaml
@@ -2,7 +2,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  generateName: migration-job
+  name: migration-job
   annotations:
     argocd.argoproj.io/hook: Sync
     argocd.argoproj.io/sync-options: Force=true,Replace=true
