--- a/helm-hooks/manifests.yaml
+++ b/helm-hooks/manifests.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: upgrade-sql-schema
           image: alpine:latest
-          command: ["echo", "Done✅"]
+          command: ["echo", "Done✅✅"]
       restartPolicy: Never
 ---
 apiVersion: apps/v1
