--- a/helm-hooks/manifests.yaml
+++ b/helm-hooks/manifests.yaml
@@ -2,10 +2,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: migration-job-{{ .Revision }}
+  name: migration-job
   annotations:
     argocd.argoproj.io/sync-wave: "-10"
-    argocd.argoproj.io/sync-options: "Replace=true"
+    argocd.argoproj.io/sync-options: "Force=true"
 spec:
   manualSelector: false
   template:
