--- a/helm-hooks/manifests.yaml
+++ b/helm-hooks/manifests.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: upgrade-sql-schema
           image: alpine:latest
-          command: ["echo", "Done✅✅"]
+          command: ["echo", "Done✅✅-3"]
       restartPolicy: Never
 ---
 apiVersion: apps/v1
