--- a/helm-hooks/manifests.yaml
+++ b/helm-hooks/manifests.yaml
@@ -12,7 +12,7 @@ spec:
       containers:
         - name: upgrade-sql-schema
           image: alpine:latest
-          command: ["echo", "Done✅✅-4"]
+          command: ["echo", "Done✅"]
       restartPolicy: Never
 ---
 apiVersion: apps/v1
@@ -38,7 +38,7 @@ spec:
           - name: liveness-port
             containerPort: 80
           startupProbe:
-            initialDelaySeconds: 1
+            initialDelaySeconds: 3
             httpGet:
               path: /
               port: liveness-port
